--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main-root {
+  background-image: url("/images/bg-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: none;
+  height: 100%;
+  width: 100%;
+}
